app/assets/stylesheets/bootstrap_and_overrides.css.less
/* ... */
.gradient-gray-darker {
	background-color: @boxHomeBackgroundColour;
	background: -moz-linear-gradient(top, #d3d3d3 0%, #ffffff 100%);
	background: -webkit-linear-gradient(top, #d3d3d3 0%, #ffffff 100%);
	background: linear-gradient(to bottom, #d3d3d3 0%, #ffffff 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d3d3d3', endColorstr='#ffffff',GradientType=0 );
}

.gradient-home-latest-issue {
	background-color: @boxHomeBackgroundColour;
	background: -moz-linear-gradient(top, @boxHomeBackgroundColourLight 0%, @boxHomeBackgroundColour 100%);
	background: -webkit-linear-gradient(top, @boxHomeBackgroundColourLight 0%, @boxHomeBackgroundColour 100%);
	background: linear-gradient(to bottom, @boxHomeBackgroundColourLight 0%, @boxHomeBackgroundColour 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr=@boxHomeBackgroundColourLight, endColorstr=@boxHomeBackgroundColour,GradientType=0 );
}

.no-gradient {
	background-color: transparent;
	background: none;
}

.box {
	background-color: @boxBackgroundColour;
	padding: 1.5em 3.7em;
	margin: 2em -3.7em 2em -3.7em;
	// border-radius: 5px;
}

.blue {
	background-color: @niBlue2018Darker;
}

.yellow {
	background-color: @footerColour;
}

.yellow-lighter {
	background-color: #f9ead3;
}

.centre {
	text-align: center;
}

.conversation {
	.yellow;
	.centre;
}

.conversation h2 {
	font-size: 4em;
}

.box.letters {
	.yellow;
	border-width: 0.7em;  
  border-style: dashed;
  border-color: @gray-darker;
}

.box.letters .author-note {
	color: inherit;
	text-transform: uppercase;
	font-weight: 600;
}

.box.debate {
	.yellow-lighter;
	.centre;
	margin: 2em -4em 2em -4em;
}

.box.debate h4 {
	.league-gothic-headings-font;
	font-size: 3em;
}

.box h3 {
	font-family: @libre-baskerville;
	font-weight: normal;
	font-style: italic;
	font-size: 1.4em;
	margin-bottom: 1.5em;
}

.box h4 {
	text-transform: uppercase;
	font-weight: bold;
	font-size: 1.1em;
}

.factbox, .boxout {
	.box;
	width: 30%;
	margin: 0;
}

.factbox h2, .factbox h3, .factbox h4, .box h2, .box h3, .box h4 {
	margin-top: 0.2em;
}

.factbox p {
	margin-bottom: 0;
}

.factbox p + p {
	margin-top: 1em;
}

.factbox.pull-left {
	margin-right: 1.5em;
	margin-bottom: 1em
}

.factbox.pull-right {
	margin-left: 1.5em;
	margin-bottom: 1em;
}

.author-note {
	font-size: 0.9em;
	color: @gray;
}

.author-note strong {
	text-transform: uppercase;
}

.article-favourite {
	font-size: 1.0em;
	min-width: 12px;
}

.article-favourite, .ios-issue-page, .page-header .ios-issue-page {
	margin: 2px 10px 5px 0;
}

.article-title .ios-issue-page, .end-of-article-social-sharing .ios-issue-page {
	margin-left: 0.5em;
}

.issue-title .article-favourite {
	color: @gray;
	opacity: 0.6;
	// font-size: 0.8em;
}

.issue-title .article-favourite:hover {
	opacity: 1.0;
}

.issue-title .share-links {
	margin-top: 0.5em;
}

.clear-hack {
	display: none;
}

.star-ratings {
	.box;
	background-color: @niBlue2018Lighter;
}

.star-ratings h4 {
	font-family: @libre-baskerville;
	font-weight: normal;
	font-style: italic;
	font-size: 1.2em;
	margin-bottom: 1.5em;
}

.star-ratings-previous-year, .star-ratings-previous-year + dd {
	color: @gray-light;
	margin-top: -7px;
	margin-bottom: 20px;
}

ul.ui-autocomplete {
	position: absolute;
	list-style: none;
	margin: 0;
	padding: 0;
	border: solid 1px #999;
	cursor: default;
	li {
		background-color: #FFF;
		border-top: solid 1px #DDD;
		margin: 0;
		padding: 0;
	a {
		color: #000;
		display: block;
		padding: 3px;
	}
	a:hover, a:active {
		background-color: #0081C2;
	}
	}
}

.end-of-article-social-sharing {
	border-top: 1px dashed #e5e5e5;
	padding-top: 1em;
	margin-top: 2em;
}

.related-articles {
	border-top: 1px dashed #e5e5e5;
	padding: 1em;
	margin: 1em 0 -1.5em 0;
	border-radius: 5px;
}

.article-previous {
	float: left;
	max-width: 40%;
	margin-left: 20px;
}

.article-next {
	float: right;
	max-width: 40%;
	text-align: right;
	margin-right: 20px;
}

.article-previous i {
	margin: 0 5px 0 -20px;
}

.article-next i {
	float: right;
	margin: 5px -20px 0 8px;
}

.article-related-by-theme {
	margin-top: 2em;
}

.article-related-by-theme h4 {
	color: @gray;
	font-size: 1.3em;
}

#generate_from_source {
	margin-bottom: 1em;
}

.red {
	color: @niRed;
}


// PAGE styling (About, Help etc)

.help-list {
	.box;
	.gradient-gray;
}

.help-body img {
	float: right;
	.shadow;
	margin: 0px 0px 1em 1em;
}

.quick-help {
	float:right;
	.box;
	margin-top: 0px;
}

.subscription-offer {
	border-radius: 5px;
	padding: 1em;
	margin-bottom: @grid-gutter-width;
	background-color: @gray-lighter;
	.gradient-gray;
}

.subscription-offer .label {
	background-color: @gray;
	margin-left: -1.35em;
	border-radius: 0 .25em .25em 0;
	text-transform: uppercase;
	font-weight: normal;
	letter-spacing: 0.1em;
	padding-top: 0.3em;
}

.subscription-offer h4 {
	font-size: 1.4em;
	margin-top: 0px;
	line-height: 1.3em;
}

.subscription-offer img {
	margin-bottom: 1em;
	width: 100%;
}

.subscription-buy-button {
	float: right;
}

.subscription-top-image {
	margin: 0 auto 20px auto;
	text-align: center;
}

.subscription-offer-list {
	font-size: 1.2em;
	width: 80%;
	margin: 0 auto 2em auto;
}

.subscription-offer-list li {
	margin-bottom: 1em;
	line-height: 1.5em;
	font-weight: bold;
}

.subscription-offer-list li span {
	font-weight: normal;
}

.subscription-offer-two {
	text-align: center;
	padding: 1em 2em;
}

.subscription-offer-two h2 {
	font-size: 3em;
}

.subscription-offer-two p {
	padding-left: 2em;
	padding-right: 2em;
	font-size: 1.1em;
}

.subscription-offer-two .fa-leaf {
	color: rgb(136,193,0);
}

.subscription-offer-two .fa-unlock {
	color: rgb(255,138,0);
}

.subscription-offer-two .fa-trophy {
	color: rgb(250,190,40);
}

.subscription-offer-two .fa-thumbs-up {
	color: rgb(38,86,157);
}

.subscription-offer-two h3 + p {
	opacity: 0.8;
}

.subscription-offer-two.subscription-buttons {
	padding-top: 4em;
}
/* ... */

